Fix social media alignment

--- a/css/landing.css
+++ b/css/landing.css
@@ -98,7 +98,8 @@ a:hover {
     text-transform: uppercase;
   }
   #social .item {
-    margin-right: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 }
 
